# jobpilot-platform

./: README.md  docker-compose.yml
backend/: .coverage  .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/sql/: 0001_initial.sql
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py
backend/app/admin/: __init__.py  api.py  router.py
backend/app/ai/: __init__.py  api.py  extraction.py  gateway.py
backend/app/analytics/: __init__.py  api.py  router.py  schemas.py  service.py  tasks.py
backend/app/application/: __init__.py  api.py  models.py  router.py  schemas.py
backend/app/assistant/: __init__.py  api.py  models.py  router.py  schemas.py  service.py
backend/app/auth/: __init__.py  api.py  models.py  oauth.py  router.py  schemas.py  service.py
backend/app/common/: __init__.py  audit.py  pagination.py
backend/app/company/: __init__.py  api.py
backend/app/connector/: __init__.py  api.py  http.py  models.py  registry.py  router.py  schemas.py  spi.py
backend/app/connector/connectors/: aggregators.py  ats.py  dice.py  public_feeds.py  search_links.py
backend/app/core/: crypto.py  db.py  errors.py  logging.py  ratelimit.py  security.py  settings.py
backend/app/generation/: __init__.py  api.py  documents.py  guardrail.py  models.py  router.py
backend/app/health/: router.py
backend/app/ingestion/: __init__.py  api.py  normalize.py  orchestrator.py  tasks.py
backend/app/matching/: __init__.py  api.py  engine.py  models.py  router.py  schemas.py  service.py
backend/app/notification/: __init__.py  api.py  channels.py  models.py  report.py  tasks.py
backend/app/resume/: __init__.py  api.py  models.py  parser.py  router.py  schemas.py
backend/app/scheduler/: __init__.py  api.py  models.py  runs.py
backend/app/user/: __init__.py  api.py  models.py  router.py  schemas.py
backend/app/worker/: celery_app.py
backend/jobpilot_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_ai.py  test_app.py  test_auth.py  test_connectors.py  test_dashboard.py  test_hardening.py  test_ingestion.py  test_scheduling.py
(+33 files in other folders)
