[project]
name = "jobpilot-backend"
version = "0.1.0"
description = "JobPilot — AI-powered job search platform (backend)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic[email]>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0.30",
    "psycopg[binary,pool]>=3.2",
    "alembic>=1.13",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "structlog>=24.1",
    "pyjwt>=2.9",
    "bcrypt>=4.2",
    "cryptography>=43.0",
    "httpx>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "tenacity>=9.0",
    "python-dateutil>=2.9",
    "python-docx>=1.1",
    "pypdf>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "import-linter>=2.0",
    "respx>=0.21",
    "testcontainers[postgres]>=4.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.importlinter]
root_package = "app"

[[tool.importlinter.contracts]]
name = "core is the bottom layer (imports no other app package)"
type = "forbidden"
source_modules = ["app.core"]
forbidden_modules = [
    "app.common", "app.auth", "app.user", "app.resume", "app.company",
    "app.connector", "app.ingestion", "app.ai", "app.matching",
    "app.generation", "app.application", "app.assistant", "app.analytics",
    "app.notification", "app.scheduler", "app.admin",
]

[[tool.importlinter.contracts]]
name = "common never imports feature modules"
type = "forbidden"
source_modules = ["app.common"]
forbidden_modules = [
    "app.auth", "app.user", "app.resume", "app.company", "app.connector",
    "app.ingestion", "app.ai", "app.matching", "app.generation",
    "app.application", "app.assistant", "app.analytics", "app.notification",
    "app.scheduler", "app.admin",
]
